--- a/app/containers/Home/styles.css
+++ b/app/containers/Home/styles.css
@@ -3,4 +3,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  /*margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  background-color: blue;*/
 }
