--- a/app/containers/Main/styles.css
+++ b/app/containers/Main/styles.css
@@ -3,7 +3,7 @@ html, body {
   padding: 0;
   height: 100%;
   width: 100%;
-  font-family: sans-serif;
+  font-family: 'Helvetica Neue', sans-serif;
   color: #5F5F5F;
 }
 
